# open-shot

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json
src/: constants.hpp  main.cpp
src/Game/: GameState.hpp  game.cpp  game.hpp  gameover.hpp  gamestate.hpp
src/GamePlay/: play.cpp  play.hpp
src/Register/: register.cpp  register.hpp
src/Registration/: register.cpp  register.hpp
